--- a/Blog-System/views/login.ejs
+++ b/Blog-System/views/login.ejs
@@ -13,8 +13,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Create New Post</h1>
-                            <span class="subheading">Have questions? I have answers.</span>
+                            <h1>Login</h1>
                         </div>
                     </div>
                 </div>
@@ -25,7 +24,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                
                         <div class="my-5">
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
@@ -34,28 +33,15 @@
                             <!-- To make this form functional, sign up at-->
                             <!-- https://startbootstrap.com/solution/contact-forms-->
                             <!-- to get an API token!-->
-                            <form action="/posts/store" method="POST" enctype="multipart/form-data">
+                            <form action="/users/login" method="POST" enctype="multipart/form-data">
                                 <div class="form-floating">
-                                    <input class="form-control" id="title" name='title' type="text" placeholder="Enter title ..." data-sb-validations="required" />
-                                    <label for="title">Title</label>
-                                    <div class="invalid-feedback" data-sb-feedback="title:required">A title is required.</div>
-                                </div>                          
-                             
+                                    <input class="form-control" id="username" name='username' type="text" placeholder="Enter username ..." data-sb-validations="required" />
+                                    <label for="title">Username</label>
+                                </div> 
                                 <div class="form-floating">
-                                    <textarea class="form-control" id="body" name="body" placeholder="Enter your content here..." style="height: 12rem" data-sb-validations="required"></textarea>
-                                    
-                                    <div class="invalid-feedback" data-sb-feedback="body:required">A content is required.</div>
-                                    <script>
-                                        $('#body').summernote({
-                                          placeholder: 'Hello Bootstrap 4',
-                                          tabsize: 2,
-                                          height: 200
-                                        });
-                                      </script>
-                                </div>
-                                <div class="form-floating">                                                                       
-                                    <input class="form-control" id="image" name="image" type="file" />
-                                </div>
+                                    <input class="form-control" id="password" name='password' type="password" placeholder="Enter password ..." data-sb-validations="required" />
+                                    <label for="title">Password</label>
+                                </div>                    
                                 <br />
                                 <!-- Submit success message-->
                                 <!---->
@@ -75,7 +61,7 @@
                                 <!-- an error submitting the form-->
                                 <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                                 <!-- Submit Button-->
-                                <button class="btn btn-primary text-uppercase" id="sendMessageButton" type="submit">Send</button>
+                                <button class="btn btn-primary text-uppercase"  type="submit">Login</button>
                             </form>
                         </div>
                     </div>
