--- a/Blog-System/views/layouts/navbar.ejs
+++ b/Blog-System/views/layouts/navbar.ejs
@@ -10,6 +10,7 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>  
                         <% if(loggedIn) { %> 
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/posts/mypost">My Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/posts/new">New Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/auth/logout">Log out</a></li>
                         <% } %>
